--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <section class="page-header">
+      <div class="project-logo"></div>
       <h1 class="project-name">Scoutomic</h1>
       <h2 class="project-tagline">SERT&#39;s Scouting Application</h2>
     </section>
