--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h4>
 <a id="digital" class="anchor" href="#digital" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Digital</h4>
 
-<p>By having every scout at the even use their own computer with Scoutomic installed, everyone is instantly updated with the latest scouting data, and can therefore make quick scouting decisions when it comes to the all-important alliance selection.</p>
+<p>By having every scout at the event use their own computer with Scoutomic installed, everyone is instantly updated with the latest scouting data, and can therefore make quick scouting decisions when it comes to the all-important alliance selection.</p>
 
 <h4>
 <a id="hybrid" class="anchor" href="#hybrid" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hybrid</h4>
