--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<h2>
 				<a id="fantastic-how-do-i-get-started" class="anchor" href="#fantastic-how-do-i-get-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fantastic! How do I get started?
 			</h2>
-			<p>Simply download Scoutomic, start it up, and you'll be good to go!</p>
+			<p>Simply download Scoutomic, fire it up, and you'll be good to go!</p>
 		</section>
 	</body>
 </html>
