--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Scoutomic</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" media="screen">
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="assets/css/github-light.css" media="screen">
 	</head>
