Add missing word

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section class="page-header">
 			<div class="project-logo"></div>
 			<h1 class="project-name">Scoutomic</h1>
-			<h2 class="project-tagline">SERT&#39;s Scouting Application</h2>
+			<h2 class="project-tagline">SERT&#39;s Desktop Scouting Application</h2>
 		</section>
 		<section class="main-content">
 			<h2>
